# SupplierAssistant

./: .gitignore  README.md  pyproject.toml
src/: app.py  app2.py  assistant_graph.py  config.py  handler.py  runnables.py  telegram_api.py
src/analytics_platform/: docker-compose.yml
src/nodes/: answer.py  classification.py  faq_chain.py  paraphrase.py  rag_chain.py  summary.py
src/protection/: __init__.py  base.py  exceeding.py  overall.py
